--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="KBAySF8fX7RqMubs-gyQOJKlllZ3B2fAIoIbbhYQy6A" />
     <title>Netflix India – Watch TV Shows Online, Watch Movies Online</title>
     <link rel="icon" href="images/netflix.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
